@@ -39,7 +39,6 @@ import org.apache.shardingsphere.mcp.support.workflow.model.IndexPlan;
 import org.apache.shardingsphere.mcp.support.workflow.model.InteractionPlan;
 import org.apache.shardingsphere.mcp.support.workflow.model.RuleArtifact;
 import org.apache.shardingsphere.mcp.support.workflow.model.WorkflowContextSnapshot;
-import org.apache.shardingsphere.mcp.support.workflow.model.WorkflowRequest;
 import org.junit.jupiter.api.Test;
 import org.mockito.ArgumentCaptor;
 import org.mockito.internal.configuration.plugins.Plugins;
@@ -72,18 +71,18 @@ class EncryptToolHandlerTest {
                 "database", "logic_db",
                 "table", "orders",
                 "column", "phone",
-                "allow_index_ddl", false,
                 "algorithm_type", "AES",
+                "allow_index_ddl", false,
                 "structured_intent_evidence", Map.of("field_semantics", "phone", "requires_decrypt", true),
                 "user_overrides", Map.of("cipher_column_name", "phone_cipher"))));
         assertThat(actual.toPayload().get("plan_id"), is("plan-1"));
         ArgumentCaptor<EncryptWorkflowRequest> requestCaptor = ArgumentCaptor.forClass(EncryptWorkflowRequest.class);
         verify(planningService).plan(eq(fixture.workflowSessionContext), eq(fixture.metadataQueryFacade), eq(fixture.queryFacade), eq("session-1"), requestCaptor.capture());
         EncryptWorkflowRequest actualRequest = requestCaptor.getValue();
-        assertFalse(actualRequest.getOptions().getAllowIndexDDL());
         assertThat(actualRequest.getAlgorithmType(), is("AES"));
         assertThat(actualRequest.getFieldSemantics(), is("phone"));
         assertThat(actualRequest.getOptions().getCipherColumnName(), is("phone_cipher"));
+        assertFalse(actualRequest.getOptions().getAllowIndexDDL());
     }
     
     @Test
@@ -102,19 +101,32 @@ class EncryptToolHandlerTest {
         assertThat(((Map<?, ?>) actualPayload.get("derived_column_plan")).get("cipher_column_name"), is("phone_cipher"));
         assertThat(((List<?>) actualPayload.get("ddl_artifacts")).size(), is(1));
         assertThat(((List<?>) actualPayload.get("index_plan")).size(), is(1));
-        assertTrue(String.valueOf(((Map<?, ?>) ((List<?>) actualPayload.get("distsql_artifacts")).get(0)).get("sql")).contains("******"));
+        assertTrue(String.valueOf(((Map<?, ?>) ((List<?>) actualPayload.get("distsql_artifacts")).getFirst()).get("sql")).contains("******"));
         List<String> actualResourceUris = extractResourceUris((List<?>) actualPayload.get("resources_to_read"));
         assertTrue(actualResourceUris.contains("shardingsphere://features/encrypt/algorithms"));
         assertTrue(actualResourceUris.contains("shardingsphere://features/encrypt/databases/logic_db/rules"));
         assertTrue(actualResourceUris.contains("shardingsphere://databases/logic_db/schemas/public/tables/orders/columns"));
-        assertTrue(actualResourceUris.contains("shardingsphere://databases/logic_db/schemas/public/tables/orders/indexes"));
-        Map<?, ?> actualNextAction = (Map<?, ?>) ((List<?>) actualPayload.get("next_actions")).get(0);
+        Map<?, ?> actualNextAction = (Map<?, ?>) ((List<?>) actualPayload.get("next_actions")).getFirst();
         assertThat(actualNextAction.get("type"), is("tool_call"));
         assertThat(actualNextAction.get("tool_name"), is("database_gateway_apply_workflow"));
-        assertFalse(actualNextAction.containsKey("requires_user_approval"));
-        assertFalse(actualNextAction.containsKey("required_arguments"));
         assertThat(((Map<?, ?>) actualNextAction.get("arguments")).get("plan_id"), is("plan-1"));
         assertThat(((Map<?, ?>) actualNextAction.get("arguments")).get("execution_mode"), is("preview"));
+    }
+    
+    @Test
+    void assertHandlePlanEncryptRuleMasksPropertiesBeforeRequirementsCollected() throws ReflectiveOperationException {
+        PlanEncryptRuleToolHandler handler = new PlanEncryptRuleToolHandler();
+        EncryptWorkflowPlanningService planningService = mock(EncryptWorkflowPlanningService.class);
+        when(planningService.plan(any(), any(), any(), any(), any())).thenReturn(createClarifyingSnapshot());
+        setField(handler, "planningService", planningService);
+        setField(handler, "propertyTemplateService", new EncryptAlgorithmPropertyTemplateService());
+        MCPResponse actual = handler.handle(createWorkflowContextFixture().workflowContext, new MCPToolCall("session-1", Map.of(
+                "database", "logic_db",
+                "table", "orders",
+                "column", "phone")));
+        Map<String, Object> actualPayload = actual.toPayload();
+        assertThat(((Map<?, ?>) ((Map<?, ?>) actualPayload.get("masked_property_preview")).get("primary")).get("aes-key-value"), is("******"));
+        assertFalse(String.valueOf(actualPayload).contains("recovery-secret-value"));
     }
     
     private WorkflowContextSnapshot createSnapshot(final String planId, final String status) {
@@ -129,8 +141,17 @@ class EncryptToolHandlerTest {
         return result;
     }
     
+    private WorkflowContextSnapshot createClarifyingSnapshot() {
+        EncryptWorkflowRequest request = new EncryptWorkflowRequest();
+        request.setAlgorithmType("AES");
+        request.getPrimaryAlgorithmProperties().put("aes-key-value", "recovery-secret-value");
+        WorkflowContextSnapshot result = createSnapshot("plan-1", "clarifying");
+        result.setRequest(request);
+        return result;
+    }
+    
     private WorkflowContextSnapshot createDetailedSnapshot() {
-        WorkflowRequest request = new WorkflowRequest();
+        EncryptWorkflowRequest request = new EncryptWorkflowRequest();
         request.setDatabase("logic_db");
         request.setSchema("public");
         request.setTable("orders");
@@ -142,7 +163,7 @@ class EncryptToolHandlerTest {
         result.setFeatureData(workflowState);
         result.getPropertyRequirements().add(new AlgorithmPropertyRequirement("primary", "aes-key-value", true, true, "key", ""));
         result.getDdlArtifacts().add(new DDLArtifact("add-column", "ALTER TABLE orders ADD COLUMN phone_cipher VARCHAR(32)", 10));
-        result.getIndexPlans().add(new IndexPlan("idx_phone_assisted", "phone_assisted_query", "assist", "CREATE INDEX idx_phone_assisted ON orders(phone_assisted_query)"));
+        result.getIndexPlans().add(new IndexPlan("idx_orders_phone_cipher", "phone_cipher", "accelerate equality lookup", "CREATE INDEX idx_orders_phone_cipher ON orders(phone_cipher)"));
         result.getRuleArtifacts().add(new RuleArtifact("create", "CREATE ENCRYPT RULE orders (PROPERTIES('aes-key-value'='123456'))"));
         result.setInteractionPlan(createInteractionPlan());
         return result;
@@ -189,7 +210,6 @@ class EncryptToolHandlerTest {
     }
     
     private record WorkflowContextFixture(MCPWorkflowHandlerContext workflowContext, WorkflowSessionContext workflowSessionContext,
-                                          MCPMetadataQueryFacade metadataQueryFacade, MCPFeatureQueryFacade queryFacade,
-                                          MCPFeatureExecutionFacade executionFacade) {
+                                          MCPMetadataQueryFacade metadataQueryFacade, MCPFeatureQueryFacade queryFacade, MCPFeatureExecutionFacade executionFacade) {
     }
 }
