@@ -38,7 +38,7 @@ class PhysicalDDLPlanningServiceTest {
     void assertPlanAddColumnArtifactsWithDefaultDefinition() {
         List<DDLArtifact> actual = service.planAddColumnArtifacts("MySQL", "orders", createDerivedColumnPlan(true, true), new LinkedHashSet<>(), "");
         assertThat(actual.size(), is(1));
-        assertThat(actual.get(0).getSql(), is(
+        assertThat(actual.getFirst().getSql(), is(
                 "ALTER TABLE orders ADD COLUMN phone_cipher VARCHAR(4000), ADD COLUMN phone_assisted_query VARCHAR(4000), ADD COLUMN phone_like_query VARCHAR(4000)"));
     }
     
@@ -59,21 +59,21 @@ class PhysicalDDLPlanningServiceTest {
     void assertPlanAddColumnArtifactsKeepsCaseSensitiveExistingColumnsDistinct() {
         List<DDLArtifact> actual = service.planAddColumnArtifacts("PostgreSQL", "orders", createDerivedColumnPlan(false, false), new LinkedHashSet<>(List.of("PHONE_CIPHER")), "");
         assertThat(actual.size(), is(1));
-        assertThat(actual.get(0).getSql(), is("ALTER TABLE orders ADD COLUMN phone_cipher VARCHAR(4000)"));
+        assertThat(actual.getFirst().getSql(), is("ALTER TABLE orders ADD COLUMN phone_cipher VARCHAR(4000)"));
     }
     
     @Test
     void assertPlanAddColumnArtifactsWithCustomDefinition() {
         List<DDLArtifact> actual = service.planAddColumnArtifacts("MySQL", "orders", createDerivedColumnPlan(false, true), new LinkedHashSet<>(), "VARCHAR(64)");
         assertThat(actual.size(), is(1));
-        assertThat(actual.get(0).getSql(), is("ALTER TABLE orders ADD COLUMN phone_cipher VARCHAR(64), ADD COLUMN phone_like_query VARCHAR(64)"));
+        assertThat(actual.getFirst().getSql(), is("ALTER TABLE orders ADD COLUMN phone_cipher VARCHAR(64), ADD COLUMN phone_like_query VARCHAR(64)"));
     }
     
     @Test
     void assertPlanAddColumnArtifactsFormatsDelimitedIdentifiers() {
         List<DDLArtifact> actual = service.planAddColumnArtifacts("MySQL", "`key`", createDerivedColumnPlan(false, false), new LinkedHashSet<>(), "");
         assertThat(actual.size(), is(1));
-        assertThat(actual.get(0).getSql(), is("ALTER TABLE `key` ADD COLUMN phone_cipher VARCHAR(4000)"));
+        assertThat(actual.getFirst().getSql(), is("ALTER TABLE `key` ADD COLUMN phone_cipher VARCHAR(4000)"));
     }
     
     @Test
@@ -82,7 +82,7 @@ class PhysicalDDLPlanningServiceTest {
         derivedColumnPlan.setCipherColumnName("phone cipher");
         List<DDLArtifact> actual = service.planAddColumnArtifacts("MySQL", "order detail", derivedColumnPlan, new LinkedHashSet<>(), "");
         assertThat(actual.size(), is(1));
-        assertThat(actual.get(0).getSql(), is("ALTER TABLE `order detail` ADD COLUMN `phone cipher` VARCHAR(4000)"));
+        assertThat(actual.getFirst().getSql(), is("ALTER TABLE `order detail` ADD COLUMN `phone cipher` VARCHAR(4000)"));
     }
     
     @Test
@@ -91,7 +91,7 @@ class PhysicalDDLPlanningServiceTest {
         derivedColumnPlan.setCipherColumnName("phone cipher");
         List<DDLArtifact> actual = service.planAddColumnArtifacts("PostgreSQL", "order detail", derivedColumnPlan, new LinkedHashSet<>(), "");
         assertThat(actual.size(), is(1));
-        assertThat(actual.get(0).getSql(), is("ALTER TABLE \"order detail\" ADD COLUMN \"phone cipher\" VARCHAR(4000)"));
+        assertThat(actual.getFirst().getSql(), is("ALTER TABLE \"order detail\" ADD COLUMN \"phone cipher\" VARCHAR(4000)"));
     }
     
     @Test
@@ -100,7 +100,7 @@ class PhysicalDDLPlanningServiceTest {
         derivedColumnPlan.setCipherColumnName("\"Phone_Cipher\"");
         List<DDLArtifact> actual = service.planAddColumnArtifacts("PostgreSQL", "\"Orders\"", derivedColumnPlan, new LinkedHashSet<>(), "");
         assertThat(actual.size(), is(1));
-        assertThat(actual.get(0).getSql(), is("ALTER TABLE \"Orders\" ADD COLUMN \"Phone_Cipher\" VARCHAR(4000)"));
+        assertThat(actual.getFirst().getSql(), is("ALTER TABLE \"Orders\" ADD COLUMN \"Phone_Cipher\" VARCHAR(4000)"));
     }
     
     @Test
