@@ -23,6 +23,7 @@ import org.apache.shardingsphere.mcp.feature.mask.MaskFeatureDefinition;
 import org.apache.shardingsphere.mcp.support.workflow.model.AlgorithmCandidate;
 import org.apache.shardingsphere.mcp.support.workflow.model.AlgorithmPropertyRequirement;
 import org.apache.shardingsphere.mcp.support.workflow.model.ClarifiedIntent;
+import org.apache.shardingsphere.mcp.support.workflow.model.RuleWorkflowFeatureData;
 import org.apache.shardingsphere.mcp.support.workflow.model.WorkflowContextSnapshot;
 import org.apache.shardingsphere.mcp.support.workflow.model.WorkflowIssue;
 import org.apache.shardingsphere.mcp.support.workflow.model.WorkflowIssueCode;
@@ -33,6 +34,8 @@ import org.apache.shardingsphere.mcp.support.workflow.service.WorkflowRuleValueU
 import org.apache.shardingsphere.mcp.support.workflow.service.WorkflowSQLUtils;
 import org.apache.shardingsphere.mcp.support.workflow.WorkflowSessionContext;
 
+import java.util.LinkedHashMap;
+import java.util.LinkedList;
 import java.util.List;
 import java.util.Map;
 
@@ -43,15 +46,15 @@ public final class MaskWorkflowPlanningService {
     
     private static final List<String> INTERACTION_STEPS = List.of(
             "Confirm database, table, column and target lifecycle",
-            "Inspect existing mask rules and logical metadata",
+            "Inspect mask algorithm plugins and DistSQL-visible rules",
             "Clarify masking intent and choose algorithm",
             "Collect algorithm properties",
-            "Generate DistSQL artifacts",
+            "Generate mask rule DistSQL artifacts",
             "Review artifacts and choose execution mode",
             "Execute or export artifacts",
             "Validate and summarize");
     
-    private static final List<String> VALIDATION_LAYERS = List.of("rules", "logical_metadata", "sql_executability");
+    private static final List<String> VALIDATION_LAYERS = List.of("rules");
     
     private final WorkflowPlanningSupport planningSupport;
     
@@ -87,8 +90,8 @@ public final class MaskWorkflowPlanningService {
      * @param request workflow request
      * @return workflow snapshot
      */
-    public WorkflowContextSnapshot plan(final WorkflowSessionContext workflowSessionContext, final MCPMetadataQueryFacade metadataQueryFacade,
-                                        final MCPFeatureQueryFacade queryFacade, final String sessionId, final WorkflowRequest request) {
+    public WorkflowContextSnapshot plan(final WorkflowSessionContext workflowSessionContext, final MCPMetadataQueryFacade metadataQueryFacade, final MCPFeatureQueryFacade queryFacade,
+                                        final String sessionId, final WorkflowRequest request) {
         WorkflowContextSnapshot result = workflowSessionContext.getOrCreate(sessionId, request.getPlanId());
         WorkflowRequest mergedRequest = prepareSnapshot(result, request);
         ClarifiedIntent clarifiedIntent = result.getClarifiedIntent();
@@ -97,17 +100,19 @@ public final class MaskWorkflowPlanningService {
             String currentStep = WorkflowLifecycle.STATUS_FAILED.equals(result.getStatus()) ? WorkflowLifecycle.STEP_FAILED : WorkflowLifecycle.STEP_CLARIFYING;
             return workflowSessionContext.persist(result, currentStep, result.getStatus());
         }
-        String databaseType = metadataQueryFacade.queryDatabase(WorkflowSQLUtils.normalizeIdentifier(mergedRequest.getDatabase()))
-                .map(each -> each.getDatabaseType()).orElse("");
+        String databaseType = queryFacade.getDatabaseType(mergedRequest.getDatabase());
         List<Map<String, Object>> existingRules = ruleInspectionService.queryMaskRules(queryFacade, mergedRequest.getDatabase(), mergedRequest.getTable());
         if (!ensureLifecycleState(clarifiedIntent, mergedRequest, existingRules, result, databaseType)) {
             return workflowSessionContext.persist(result, WorkflowLifecycle.STEP_FAILED, WorkflowLifecycle.STATUS_FAILED);
         }
+        if (!ensureSupportedRuleMutation(clarifiedIntent, mergedRequest, existingRules, result, databaseType)) {
+            return workflowSessionContext.persist(result, WorkflowLifecycle.STEP_CLARIFYING, WorkflowLifecycle.STATUS_CLARIFYING);
+        }
         if (isDropWorkflow(clarifiedIntent)) {
-            planArtifacts(clarifiedIntent, mergedRequest, existingRules, result, databaseType);
+            planArtifacts(clarifiedIntent, mergedRequest, existingRules, result);
             return workflowSessionContext.persist(result, WorkflowLifecycle.STEP_REVIEW, WorkflowLifecycle.STATUS_PLANNED);
         }
-        if (!planNonDrop(queryFacade, clarifiedIntent, mergedRequest, existingRules, result, databaseType)) {
+        if (!planNonDrop(queryFacade, clarifiedIntent, mergedRequest, existingRules, result)) {
             return workflowSessionContext.persist(result, WorkflowLifecycle.STEP_CLARIFYING, WorkflowLifecycle.STATUS_CLARIFYING);
         }
         return workflowSessionContext.persist(result, WorkflowLifecycle.STEP_REVIEW, WorkflowLifecycle.STATUS_PLANNED);
@@ -125,20 +130,48 @@ public final class MaskWorkflowPlanningService {
         return planningSupport.ensureLifecycleState("Mask rule", clarifiedIntent, ruleExists, snapshot);
     }
     
+    private boolean ensureSupportedRuleMutation(final ClarifiedIntent clarifiedIntent, final WorkflowRequest request,
+                                                final List<Map<String, Object>> maskRules, final WorkflowContextSnapshot snapshot, final String databaseType) {
+        if (isDropWorkflow(clarifiedIntent)) {
+            return !hasRemainingRulesAfterDrop(request, maskRules, databaseType) || rejectExistingTableRuleMutation(clarifiedIntent, request, maskRules, snapshot);
+        }
+        return maskRules.isEmpty() || rejectExistingTableRuleMutation(clarifiedIntent, request, maskRules, snapshot);
+    }
+    
+    private boolean hasRemainingRulesAfterDrop(final WorkflowRequest request, final List<Map<String, Object>> maskRules, final String databaseType) {
+        return maskRules.stream().anyMatch(each -> !WorkflowSQLUtils.isSameIdentifier(databaseType, request.getColumn(), WorkflowRuleValueUtils.getRuleValue(each, "column")));
+    }
+    
+    private boolean rejectExistingTableRuleMutation(final ClarifiedIntent clarifiedIntent, final WorkflowRequest request,
+                                                    final List<Map<String, Object>> maskRules, final WorkflowContextSnapshot snapshot) {
+        snapshot.getClarifiedIntent().getClarificationMessages().add(
+                "Current Proxy DistSQL cannot automatically mutate an existing mask table rule. Recreate the mask rule manually with the complete column set during a maintenance window.");
+        snapshot.getIssues().add(new WorkflowIssue(WorkflowIssueCode.MASK_ALTER_SCOPE_LIMITED, "error", "planning-artifacts",
+                "Mask planning cannot automatically alter an existing table rule or shrink it while preserving remaining columns in V1.",
+                "Manually recreate the mask rule with the complete column set after reviewing data impact.", true,
+                Map.of("operation_type", clarifiedIntent.getOperationType(), "target_column", request.getColumn(), "existing_columns", createExistingRuleColumns(maskRules))));
+        return false;
+    }
+    
+    private List<String> createExistingRuleColumns(final List<Map<String, Object>> maskRules) {
+        List<String> result = new LinkedList<>();
+        for (Map<String, Object> each : maskRules) {
+            result.add(WorkflowRuleValueUtils.getRuleValue(each, "column"));
+        }
+        return result;
+    }
+    
     private boolean isDropWorkflow(final ClarifiedIntent clarifiedIntent) {
         return WorkflowLifecycle.OPERATION_DROP.equalsIgnoreCase(clarifiedIntent.getOperationType());
     }
     
     private boolean planNonDrop(final MCPFeatureQueryFacade queryFacade, final ClarifiedIntent clarifiedIntent, final WorkflowRequest request,
-                                final List<Map<String, Object>> existingRules, final WorkflowContextSnapshot snapshot, final String databaseType) {
+                                final List<Map<String, Object>> existingRules, final WorkflowContextSnapshot snapshot) {
         planAlgorithms(queryFacade, clarifiedIntent, request, snapshot);
         if (!planningSupport.isReadyForArtifactPlanning(request, clarifiedIntent, snapshot, findPropertyRequirements(request), "Please use a mask algorithm visible in the current Proxy.")) {
             return false;
         }
-        if (!ensureSupportedTableRuleExpansion(request, existingRules, snapshot, databaseType)) {
-            return false;
-        }
-        planArtifacts(clarifiedIntent, request, existingRules, snapshot, databaseType);
+        planArtifacts(clarifiedIntent, request, existingRules, snapshot);
         return true;
     }
     
@@ -147,7 +180,7 @@ public final class MaskWorkflowPlanningService {
         List<AlgorithmCandidate> algorithmCandidates = algorithmRecommendationService.recommendMaskAlgorithms(clarifiedIntent, request, maskAlgorithms, snapshot.getIssues());
         snapshot.getAlgorithmCandidates().addAll(algorithmCandidates);
         if (!algorithmCandidates.isEmpty()) {
-            request.setAlgorithmType(algorithmCandidates.get(0).getAlgorithmType());
+            request.setAlgorithmType(algorithmCandidates.getFirst().getAlgorithmType());
         }
     }
     
@@ -155,22 +188,19 @@ public final class MaskWorkflowPlanningService {
         return algorithmPropertyTemplateService.findRequirements(request.getAlgorithmType());
     }
     
-    private boolean ensureSupportedTableRuleExpansion(final WorkflowRequest request, final List<Map<String, Object>> maskRules, final WorkflowContextSnapshot snapshot, final String databaseType) {
-        if (maskRules.isEmpty() || maskRules.stream().anyMatch(each -> WorkflowSQLUtils.isSameIdentifier(databaseType, request.getColumn(), WorkflowRuleValueUtils.getRuleValue(each, "column")))) {
-            return true;
-        }
-        snapshot.getClarifiedIntent().getClarificationMessages().add(
-                "Current Proxy DistSQL cannot automatically expand an existing mask table rule with new logic columns. Recreate the rule manually during a maintenance window.");
-        snapshot.getIssues().add(new WorkflowIssue(WorkflowIssueCode.MASK_ALTER_SCOPE_LIMITED, "error", "planning-artifacts",
-                "Mask planning cannot expand an existing table rule with new logic columns in V1.",
-                "Manually recreate the mask rule with the complete column set after reviewing data impact.", true, Map.of("adds_logic_column", true)));
-        return false;
+    private void planArtifacts(final ClarifiedIntent clarifiedIntent, final WorkflowRequest request,
+                               final List<Map<String, Object>> maskRules, final WorkflowContextSnapshot snapshot) {
+        snapshot.getRuleArtifacts().add(isDropWorkflow(clarifiedIntent)
+                ? ruleDistSQLPlanningService.planMaskDropRule(request)
+                : ruleDistSQLPlanningService.planMaskRule(request));
+        snapshot.setFeatureData(new RuleWorkflowFeatureData(maskRules, isDropWorkflow(clarifiedIntent) ? List.of() : List.of(createExpectedTargetRule(request))));
     }
     
-    private void planArtifacts(final ClarifiedIntent clarifiedIntent, final WorkflowRequest request,
-                               final List<Map<String, Object>> maskRules, final WorkflowContextSnapshot snapshot, final String databaseType) {
-        snapshot.getRuleArtifacts().add(isDropWorkflow(clarifiedIntent)
-                ? ruleDistSQLPlanningService.planMaskDropRule(request, maskRules, databaseType)
-                : ruleDistSQLPlanningService.planMaskRule(request, maskRules, databaseType));
+    private Map<String, Object> createExpectedTargetRule(final WorkflowRequest request) {
+        Map<String, Object> result = new LinkedHashMap<>(3, 1F);
+        result.put("column", request.getColumn());
+        result.put("algorithm_type", request.getAlgorithmType());
+        result.put("algorithm_props", request.getPrimaryAlgorithmProperties());
+        return result;
     }
 }
