@@ -99,8 +99,8 @@ class LLMChatModelClientTest {
                     createToolDefinitions(), "required", true);
             assertThat(actual.getContent(), is("done"));
             assertThat(actual.getToolCalls().size(), is(1));
-            assertThat(actual.getToolCalls().get(0).getName(), is("mcp_read_resource"));
-            assertCompletePayload(readPayload(actualBodies.get(0)));
+            assertThat(actual.getToolCalls().getFirst().getName(), is("mcp_read_resource"));
+            assertCompletePayload(readPayload(actualBodies.getFirst()));
         } finally {
             server.stop(0);
         }
@@ -162,7 +162,7 @@ class LLMChatModelClientTest {
     
     private LLME2EConfiguration createConfiguration(final String baseUrl, final int readyTimeoutSeconds) {
         return new LLME2EConfiguration(baseUrl, "openai-compatible", REQUIRED_MODEL, "mcp-llm-score", readyTimeoutSeconds, 30, 10,
-                Path.of("target/llm-e2e"), "run-id", RuntimeMode.DOCKER, "llama.cpp", "apache/shardingsphere-mcp-llm-runtime:local", "ghcr.io/ggml-org/llama.cpp:server",
+                Path.of("target/llm-e2e"), "run-id", RuntimeMode.DOCKER, "llama.cpp", "apache/shardingsphere-mcp-llm-runtime:local", "ghcr.io/ggml-org/llama.cpp:server-b9191",
                 "test-base-server-image-digest", MODEL_METADATA);
     }
     
